@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#5068] Move token check for new resources below error validation in processor to prevent bogus duplicate resource issue
 - [#4945] Remove weblink content maxlength restriction
 - [#4790] Add support for comment tag token, e.g. [[- comments here]]
 - [#5505] Fix issue with dropdowns in Fx5
